# pyplinefy

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/pyplinefy/: __init__.py  dynamic_queue_manager.py  factory.py  managed_pipeline.py  pipeline_manager.py  queue_interface.py  queue_manager.py
tests/: test_create_queue_interface.py  test_dynamic_queue_manager.py  test_managed_pipeline.py  test_pipeline_manager.py  test_queue_interface.py  test_queue_manager.py
