[metadata]
name = pyplinefy
version = 0.2.0
description = A managed async pipeline package for Python.
long_description = file: README.md
long_description_content_type = text/markdown
author = Hunter Yoakum
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
